Fixed sonar bugs